# data-mgmt

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
src/data_mgmt/: __init__.py  __main__.py  communication.py  configuration.py  mgmt.py
src/data_mgmt/datasources/: __init__.py  dawa.py  dmp.py
tests/: __init__.py  test_config.py  test_mgmt.py
